<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/players_alive_on_squad_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:padding="20dp"
        android:text="@string/user_squad_string"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:id="@+id/players_alive_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/players_alive_on_squad_string">

        <Button
            android:id="@+id/players_alive_on_squad_decrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus_symbol"
            android:onClick="decrement_user_squad_players"/>

        <TextView
            android:id="@+id/players_alive_on_squad_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="50sp"
            android:gravity="center"/>

        <Button
            android:id="@+id/players_alive_on_squad_increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus_symbol"
            android:onClick="increment_user_squad_players"/>
    </LinearLayout>

    <TextView
        android:id="@+id/players_alive_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:padding="20dp"
        android:text="@string/overall_players_alive_string"
        app:layout_constraintTop_toBottomOf="@id/players_alive_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:id="@+id/overall_players_alive_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/players_alive_string">

        <Button
            android:id="@+id/overall_players_alive_decrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus_symbol"
            android:onClick="decrement_current_player_count"/>

        <TextView
            android:id="@+id/overall_players_alive_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="50sp"
            android:gravity="center"/>

        <Button
            android:id="@+id/overall_players_alive__increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus_symbol"
            android:onClick="increment_current_player_count"/>
    </LinearLayout>

    <TextView
        android:id="@+id/squads_alive_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:padding="20dp"
        android:text="@string/squad_count_string"
        app:layout_constraintTop_toBottomOf="@id/overall_players_alive_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:id="@+id/squads_alive_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/squads_alive_string">

        <Button
            android:id="@+id/overall_squads_alive_decrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus_symbol"
            android:onClick="decrement_current_squad_count"/>

        <TextView
            android:id="@+id/overall_squads_alive_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="50sp"
            android:gravity="center"/>

        <Button
            android:id="@+id/overall_squads_alive__increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus_symbol"
            android:onClick="increment_current_squad_count"/>
    </LinearLayout>

    <TextView
        android:id="@+id/expected_squads_comp_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/squads_alive_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:paddingTop="20dp"/>


    <ListView
        android:id="@+id/squad_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/expected_squads_comp_string"
        tools:layout_editor_absoluteX="0dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>